# Local_chat

./: CMakeLists.txt  README.md  README.txt  Secrets.txt  link_to_repo.txt
Data/Map/: test_map1.tmx  tilemap_packed.tsx  tilemap_packed1.tsx
Data/kenney_simplified-platformer-pack/Tilesheet/: platformPack_tilesheet_small.xcf
src/: Client.cpp  Client.h  ClientData.cpp  ClientData.h  Game.cpp  Game.h  PacketHeader.cpp  PacketHeader.h  Server.cpp  Server.h  main.cpp
src/GameObjects/: Button.cpp  Button.h  Coins.cpp  Coins.h  GameObject.cpp  GameObject.h  Gate.cpp  Gate.h  Key.cpp  Key.h  Player.cpp  Player.h  Well.cpp  Well.h
src/Gamestates/: Gamestates.cpp  Gamestates.h  MainGame.cpp  MainGame.h  MainMenu.cpp  MainMenu.h  Transitions.cpp  Transitions.h  WinState.cpp  WinState.h
src/UI and Layout/: ChatMessages.cpp  ChatMessages.h  Chatbox.cpp  Chatbox.h  Layout.cpp  Layout.h  Tile.cpp  Tile.h  UI.cpp  UI.h  Vector.cpp  Vector.h
src/tmx/: ImageLayer.cpp  LayerGroup.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  ObjectTypes.cpp  Property.cpp  TileLayer.cpp  Tileset.cpp
